chore: Change page title to Translator MarianMT Model

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Translator</title>
+    <title>Translator (MarianMT Model)</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
@@ -192,7 +192,7 @@
 
         <!-- Header -->
         <div class="row" style="display: flex; align-items: center; justify-content: space-between;">
-            <h4 style="margin: 0;">Translator</h4>
+            <h4 style="margin: 0;">Translator (MarianMT Model)</h4>
             <div style="display: flex; gap: 24px;">
                 <div class="switch theme-toggle">
                     <label style="color: inherit;">
